# LLM-Studio

./: .gitignore  Dockerfile  Makefile  README.md  compatibility_plan.md  docker-compose.yml  pyproject.toml  requirements.txt
artifacts/evaluation/: metrics.json
backend/: __init__.py
backend/api/: __init__.py  router.py
backend/benchmarking/: __init__.py  benchmarker.py
backend/core/: __init__.py  config.py  constants.py  dependencies.py  exceptions.py  version.py
backend/datasets/: __init__.py  cache.py  hashing.py  loader.py  preview.py  processor.py  repository.py  splitter.py  token_estimator.py  validator.py
backend/evaluation/: __init__.py  benchmark.py  evaluator.py  metrics.py  pipeline.py  report.py
backend/experiment_tracking/: __init__.py  metrics.py  runs.py  tracker.py
compatibility/: current_environment.md  dependency_matrix.md  future_upgrade_checklist.md  known_issues.md  migration_strategy.md  notebook_dependency_map.md
configs/: config.yaml
docs/: architecture.md  development_guide.md  folder_structure.md  walkthrough_phase2.md  walkthrough_phase3.md  walkthrough_phase4.md
frontend/: app.py
tests/: __init__.py  test_benchmark.py  test_cache.py  test_config.py  test_evaluation_pipeline.py  test_evaluation_registry.py  test_evaluator.py  test_fs.py  test_loader.py  test_logger.py  test_lora.py  test_metrics.py  test_model_registry.py  test_pre_training_validator.py  test_processor.py  test_repository.py  test_runner.py  test_schemas.py  test_splitter.py  test_tokenizer.py  test_validator.py
training/: README.md  requirements.txt
(+81 files in other folders)
